--- a/.cargo/config
+++ b/.cargo/config
@@ -1,5 +1,6 @@
 [build]
 target = "riscv64gc-unknown-none-elf"
+rustflags = ['-Clink-arg=-Tsrc/lds/virt.lds']
 
 [target.riscv64gc-unknown-none-elf]
 linker = "riscv64-unknown-linux-gnu-gcc"
